WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

	- add FORCE_UNBUFFERED_XFT define to features.h.
	- moved on_osc_seq to on_osc_seq_perl and added a more
          generic osc_seq.
        - fix a bug causing double callback invocations when perl hooks
          were invoked recursively.

7.7  Tue Feb 21 12:32:49 CET 2006
	- use double-buffered drawing (xft fonts only). On many driver/hardware
          combination this actually increases xft drawing speed, at the expense
          of more network bandwidth and slight nausea on the side of the author.
	- readline perl extension now requires shift-click instead of a normal
          click, and eats the click.
        - tabbed perl extension now supports -e.
        - disabled graphics-exposures on the main drawing GC, report any
          refresh bugs please.
	- improve property handling for -pe tabbed: avoid unnecessary property
          changes (for kde's benefit) at the expense of extra round-trips,
          improve size hint setting.
        - modified XIM according to a patch sent by Takano Akio that sets
          the preedit rectangle for OverTheSpot, which helps some input methods
          to correctly position their preedit window.
        - un-optimise the line clearing on newly scrolled-in lines a bit: the
          former reasoning was that any fg colour on default bg looks the same
          in empts spaces, but thats not true when reversing (e.g. selection),
          so also check for matching fg colours. This fixes the problem where
          selecting newly scrolled-in lines would exhibit wrong colours.
        - fix a bug in the perl interface causing focus in events to generate
          focus out perl events, causing bad focus effects with -pe tabbed.
        - fix a race resulting in a crash on exiting.
        - fix a with --disable-xft that caused xfreecolors to be called on